Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-371

Hyperion MDS failed on loading sptlrpc for ENOMEM

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.1.0
    • Lustre 2.1.0
    • None
    • 3
    • 4975

      Failure looks like this, -1 debug log attached.

      1. ehyperion-mds1 /root > modprobe -v lustre
        insmod /lib/modules/2.6.18-238.9.1.el5_lustre/updates/kernel/net/lustre/libcfs.ko libcfs_panic_on_lbug=1
        insmod /lib/modules/2.6.18-238.9.1.el5_lustre/updates/kernel/fs/lustre/lvfs.ko
        insmod /lib/modules/2.6.18-238.9.1.el5_lustre/updates/kernel/net/lustre/lnet.ko networks="o2ib0(ib0)" live_router_check_in
        insmod /lib/modules/2.6.18-238.9.1.el5_lustre/updates/kernel/fs/lustre/obdclass.ko
        insmod /lib/modules/2.6.18-238.9.1.el5_lustre/updates/kernel/fs/lustre/ptlrpc.ko
        WARNING: Error inserting ptlrpc (/lib/modules/2.6.18-238.9.1.el5_lustre/updates/kernel/fs/lustre/ptlrpc.ko): Cannot allocate memor
        WARNING: Error inserting fld (/lib/modules/2.6.18-238.9.1.el5_lustre/updates/kernel/fs/lustre/fld.ko): Cannot allocate memory
        WARNING: Error inserting fid (/lib/modules/2.6.18-238.9.1.el5_lustre/updates/kernel/fs/lustre/fid.ko): Cannot allocate memory
        WARNING: Error inserting mdc (/lib/modules/2.6.18-238.9.1.el5_lustre/updates/kernel/fs/lustre/mdc.ko): Cannot allocate memory
        WARNING: Error inserting osc (/lib/modules/2.6.18-238.9.1.el5_lustre/updates/kernel/fs/lustre/osc.ko): Cannot allocate memory
        WARNING: Error inserting lov (/lib/modules/2.6.18-238.9.1.el5_lustre/updates/kernel/fs/lustre/lov.ko): Cannot allocate memory
        FATAL: Error inserting lustre (/lib/modules/2.6.18-238.9.1.el5_lustre/updates/kernel/fs/lustre/lustre.ko): Cannot allocate memory

      I checked the log, it failed at this point but we need more information to pin the bug

      00000100:00000040:8.0:1306524860.227747:0:14126:0:(pinger.c:315:ptlrpc_pinger_main()) next wakeup in 25000 (4304047406)
      00000100:00000001:0.0:1306524860.227920:0:14070:0:(ptlrpc_module.c:109:ptlrpc_init()) Process leaving via cleanup (rc=18446744073709551604 : -12 : 0xfffffffffffffff4)

            liang Liang Zhen (Inactive)
            liang Liang Zhen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: